# vue-tauri-starter

./: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build.yml
app/: index.html
docs/: index.md
docs/.vitepress/: config.ts
src/: App.vue  main.js  main.ts  router.js  router.ts  style.css
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: about.json  default.json  global-shortcut.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/app/: PreferencesDialog.vue  Sidebar.vue  TitleBar.vue
src/components/ui/alert/: AlertDescription.vue  index.ts
src/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue
src/components/ui/avatar/: AvatarFallback.vue
src/components/ui/badge/: index.ts
src/components/ui/breadcrumb/: BreadcrumbLink.vue  BreadcrumbList.vue  BreadcrumbPage.vue
src/components/ui/button/: index.ts
src/components/ui/carousel/: CarouselContent.vue
src/components/ui/chart/: ChartLegendContent.vue  index.ts
src/composables/: AboutWindow.ts  AppMenu.ts  AppPreferences.ts  AppShortcuts.ts  AppVersion.ts  UseAppPreferences.ts  UsePreferencesDialog.ts
src/layouts/: Dashboard.vue  DefaultView.vue
src/pages/: About.vue
src/services/: Store.ts
src/themes/: blue.css  green.css  monochrome.css  orange.css  red.css  rose.css  violet.css  yellow.css
src/types/: vue-dom.d.ts
src/views/: Home.vue
(+57 files in other folders)
