[package]
name = "app"
version = "0.0.1"
edition = "2021"
rust-version = "1.91"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = "0.24"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
